# voicevox-tts-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
openjtalk/: Cargo.toml
openjtalk-sys/: Cargo.toml  build.rs
openjtalk-sys/openjtalk/: CMakeLists.txt
openjtalk-sys/openjtalk/src/: openjtalk.cpp  openjtalk.hpp
openjtalk-sys/src/: lib.rs
openjtalk/examples/: fullcontext.rs
openjtalk/src/: lib.rs
voicevox-core/: Cargo.toml
voicevox-core-sys/: Cargo.toml  build.rs  wrapper.hpp
voicevox-core/examples/: print_info.rs
voicevox-core/examples/gen_audio/: main.rs
voicevox-core/examples/gen_audio/data/: f0.npy  phoneme.npy
voicevox-core/src/: lib.rs
voicevox-tts/: Cargo.toml
voicevox-tts/examples/: simple_tts.rs
voicevox-tts/src/: acoustic_feature_extractor.rs  lib.rs  model.rs  mora_list.rs  synthesis_engine.rs
voicevox-tts/src/full_context_label/: accent_phrase.rs  breath_group.rs  mod.rs  mora.rs  phoneme.rs  utterance.rs
